# LearningRunning

./: .gitignore  README.md
Mario/: config.py  mario.py  neural_network.py  nn_viz.py  requirements.txt  smb_ai.py  utils.py
Mario/Details/: stats.csv
Mario/Details/individuals/: settings.config
Mario/Details/individuals/best_ind_gen0/: W1.npy  W2.npy  b1.npy  b2.npy
Mario/Details/individuals/best_ind_gen1/: W1.npy  W2.npy  b1.npy  b2.npy
Mario/Details/individuals/best_ind_gen10/: W1.npy  W2.npy  b1.npy  b2.npy
Mario/Details/individuals/best_ind_gen11/: W1.npy  W2.npy  b1.npy  b2.npy
Mario/Details/individuals/best_ind_gen12/: W1.npy  W2.npy  b1.npy  b2.npy
Mario/Details/individuals/best_ind_gen13/: W1.npy  W2.npy  b1.npy  b2.npy
Mario/Details/individuals/best_ind_gen14/: W1.npy  W2.npy  b1.npy  b2.npy
Mario/Details/individuals/best_ind_gen15/: W1.npy  W2.npy  b1.npy  b2.npy
Mario/Details/individuals/best_ind_gen16/: W1.npy  W2.npy  b1.npy  b2.npy
Mario/Details/individuals/best_ind_gen17/: W1.npy  W2.npy  b1.npy  b2.npy
Mario/Example/W7-1/: __note__.txt
Mario/genetic_algorithm/: individual.py  mutation.py  population.py  selection.py
learningrunning/: .travis.yml  AUTHORS.rst  CONTRIBUTING.rst  LICENSE  Makefile  README.rst  pyproject.toml  tox.ini
learningrunning/.github/: ISSUE_TEMPLATE.md
learningrunning/docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
learningrunning/src/learningrunning/: __init__.py  cli.py
learningrunning/tests/: __init__.py  test_learningrunning.py
(+94 files in other folders)
