[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "learningrunning"
version = "0.1.0"
description = "Repository for practicing purpose"
readme = "README.rst"
authors = [
  {name = "Jinseong Choi", email = "jsc.tiding1@gmail.com"}
]
maintainers = [
  {name = "Jinseong Choi", email = "jsc.tiding1@gmail.com"}
]
classifiers = [

]
license = {text = "MIT license"}
dependencies = [
  "typer"
]

[project.optional-dependencies]
dev = [
    "coverage",  # testing
    "mypy",  # linting
    "pytest",  # testing
    "ruff"  # linting
]

[project.urls]

bugs = "https://github.com/5peaker/learningrunning/issues"
changelog = "https://github.com/5peaker/learningrunning/blob/master/changelog.md"
homepage = "https://github.com/5peaker/learningrunning"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"*" = ["*.*"]




# Mypy
# ----

[tool.mypy]
files = "."

# Use strict defaults
strict = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
# Don't require test functions to include types
module = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"

